<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

    <RelativeLayout
    android:id="@+id/relative_layout1"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:paddingTop="15dp"
        android:id="@+id/imageView_name"
        android:layout_marginStart="16dp"
        app:srcCompat="@drawable/ic_action_name"
        android:contentDescription="@string/todo" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
          >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="263dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="22dp"
                android:background="@drawable/edittxt_cycle_bg"
                android:hint="@string/name"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" />


        </android.support.design.widget.TextInputLayout>

</RelativeLayout>


    <RelativeLayout
        android:id="@+id/relative_layout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:paddingTop="15dp"
            android:layout_marginStart="16dp"
            app:srcCompat="@drawable/ic_action_email" android:contentDescription="@string/todo3" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
       >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="263dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="22dp"

                android:background="@drawable/edittxt_cycle_bg"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" />


        </android.support.design.widget.TextInputLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:paddingTop="15dp"
            android:layout_marginStart="16dp"
            app:srcCompat="@drawable/ic_action_person" android:contentDescription="@string/todo1" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:padding="2dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="263dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="22dp"

                android:background="@drawable/edittxt_cycle_bg"
                android:hint="@string/username"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" />


        </android.support.design.widget.TextInputLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:paddingTop="15dp"
            android:layout_marginStart="16dp"
            app:srcCompat="@drawable/ic_action_password" android:contentDescription="@string/todo2" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
          >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="263dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="22dp"

                android:background="@drawable/edittxt_cycle_bg"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" />


        </android.support.design.widget.TextInputLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout5"
        android:layout_width="match_parent"
        android:layout_height="90sp">


        <LinearLayout
            android:id="@+id/uselessParentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_gender"
                android:layout_width="284dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gender"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/radioButton_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioButton_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female" />
            </RadioGroup>

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/button_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="20sp" />


</LinearLayout>